--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
+    "react-tracked": "^1.7.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
