--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,38 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
-node_modules/
+frontend/node_modules/
 
 # Expo
-.expo/
-dist/
-web-build/
+frontend/.expo/
+frontend/dist/
+frontend/web-build/
 
 # Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+frontend/*.orig.*
+frontend/*.jks
+frontend/*.p8
+frontend/*.p12
+frontend/*.key
+frontend/*.mobileprovision
 
 # Metro
-.metro-health-check*
+frontend/.metro-health-check*
 
 # debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+frontend/npm-debug.*
+frontend/yarn-debug.*
+frontend/yarn-error.*
 
 # macOS
-.DS_Store
-*.pem
+frontend/.DS_Store
+frontend/*.pem
 
 # local env files
-.env*.local
+frontend/.env*.local
 
 # typescript
-*.tsbuildinfo
+frontend/*.tsbuildinfo
+
+# Backend
+backend/node_modules
